tests/ecc-aws-038-security_group_ingress_is_restricted_traffic_to_smtp_port_25/placebo-red/ec2.DescribeSecurityGroups_1.json
{
    "status_code": 200,
    "data": {
        "SecurityGroups": [
            {
                "GroupId": "sg-0e24cbbe76e4a9028",
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1",
                        "UserIdGroupPairs": [],
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": []
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "security_group_red"
                    },
                    {
                        "Key": "ComplianceStatus",
                        "Value": "Red"
                    }
                ],
                "VpcId": "vpc-000",
                "OwnerId": "644160558196",
                "GroupName": "security_group_red",
                "Description": "Managed by Terraform",
                "IpPermissions": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 25,
                        "ToPort": 25,
                        "UserIdGroupPairs": [],
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": []
                    }
                ]
            },
            {
                "GroupId": "sg-0e24cbbe76e4a9038",
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1",
                        "UserIdGroupPairs": [],
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": []
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "security_group_red2"
                    },
                    {
                        "Key": "ComplianceStatus",
                        "Value": "Red"
                    }
                ],
                "VpcId": "vpc-000",
                "OwnerId": "644160558196",
                "GroupName": "security_group_red2",
                "Description": "Managed by Terraform",
                "IpPermissions": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 25,
                        "ToPort": 25,
                        "UserIdGroupPairs": [],
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": []
                    }
                ]
            }
        ],
        "ResponseMetadata": {}
    }
}
